--- a/blank.html
+++ b/blank.html
@@ -53,9 +53,7 @@
   <body class="c-app">
     <div class="c-sidebar c-sidebar-dark c-sidebar-fixed c-sidebar-lg-show" id="sidebar">
       <div class="c-sidebar-brand d-lg-down-none">
-        <svg class="c-sidebar-brand-full" width="118" height="46" alt="CoreUI Logo">
-          <use xlink:href="assets/brand/coreui.svg#full"></use>
-        </svg>
+        <img class="c-sidebar-brand-full" width="140" height="46" alt="CloudLab Logo" src="assets/brand/bit-cloud-lab.png"></img>
         <svg class="c-sidebar-brand-minimized" width="46" height="46" alt="CoreUI Logo">
           <use xlink:href="assets/brand/coreui.svg#signet"></use>
         </svg>
@@ -180,10 +178,7 @@
             <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-menu"></use>
           </svg>
         </button><a class="c-header-brand d-lg-none" href="#">
-          <svg width="118" height="46" alt="CoreUI Logo">
-            <use xlink:href="assets/brand/coreui.svg#full"></use>
-          </svg></a>
-        <button class="c-header-toggler c-class-toggler mfs-3 d-md-down-none" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true">
+          <img class="c-sidebar-brand-full" width="140" height="46" alt="CloudLab Logo" src="assets/brand/bit-cloud-lab.png"></img>        <button class="c-header-toggler c-class-toggler mfs-3 d-md-down-none" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true">
           <svg class="c-icon c-icon-lg">
             <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-menu"></use>
           </svg>
