--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
           <div class="card-group">
             <div class="card p-4">
               <div class="card-body">
-                <h1>Login</h1>
+                <img src="/assets/brand/bit-cloud-lab.png"></img>
                 <p class="text-muted">Sign In to your account</p>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend"><span class="input-group-text">
                       <svg class="c-icon">
                         <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-user"></use>
                       </svg></span></div>
-                  <input class="form-control" type="text" placeholder="Adminstrator">
+                  <input class="form-control" type="text" placeholder="superuser">
                 </div>
                 <div class="input-group mb-4">
                   <div class="input-group-prepend"><span class="input-group-text">
