first version, static html

--- a/main.html
+++ b/main.html
@@ -230,9 +230,9 @@
                           </svg>
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
-                          <a class="dropdown-item" href="main.html">Raw Data</a>
-                          <a class="dropdown-item" href="main.html">Hysteresis Loops</a>
-                          <a class="dropdown-item" href="main.html">Prediction</a></div>
+                          <a class="dropdown-item" href="gcr15.html">Raw Data</a>
+                          <a class="dropdown-item" href="gcr15.html">Hysteresis Loops</a>
+                          <a class="dropdown-item" href="gcr15.html">Prediction</a></div>
                       </div>
                     </div>
                     <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
@@ -255,9 +255,9 @@
                           </svg>
                         </button>
                         <div class="dropdown-menu dropdown-menu-right">
-                          <a class="dropdown-item" href="main.html">Raw Data</a>
-                          <a class="dropdown-item" href="main.html">Hysteresis Loops</a>
-                          <a class="dropdown-item" href="main.html">Prediction</a></div>
+                          <a class="dropdown-item" href="qt800.html">Raw Data</a>
+                          <a class="dropdown-item" href="qt800.html">Hysteresis Loops</a>
+                          <a class="dropdown-item" href="qt800.html">Prediction</a></div>
                       </div>                        
                     </div>
                     <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
@@ -335,27 +335,51 @@
               </div>
               <!-- /.row-->
               <div class="card border-primary">
-                <div class="card-header">Advanced Search</div>
-                <div class="card-body">.</div>
+                <div class="card-header">
+                  <a class="link" href="history_data.html">Advanced Search</a>
+                </div>
+                <div class="card-body">
+                  根据 材料名称、实验名称、试棒编号查询。其次是根据日期、旋转频率、采样频率、材料半径、材料长度查询。<br>
+                </div>
               </div>
               <div class="card border-success">
-                <div class="card-header">Experiments Data</div>
-                <div class="card-body">.</div>
+                <div class="card-header">
+                  <a class="link" href="hysteresis_loops.html">Hysteresis Loops</a>
+                </div>
+                <div class="card-body">绘制试棒的滞回环</div>
+              </div>
+              <div class="card border-success">
+                <div class="card-header">
+                  <a class="link" href="predict.html">Prediction</a>
+                </div>
+                <div class="card-body">根据实验数据预测试棒寿命</div>
+              </div>
+              <div class="card border-success">
+                <div class="card-header">
+                  <a class="link" href="compare.html">Compare Materials</a>
+                </div>
+                <div class="card-body">比较不同材料的寿命（预测）</div>
               </div>
               <!-- /.row-->
               <div class="card border-info">
-                <div class="card-header">Algorithm</div>
-                <div class="card-body">.</div>
+                <div class="card-header">
+                  <a class="link" href="algorithm.html">Algorithm</a>
+                </div>
+                <div class="card-body">Basquin Manson-Coffin Mura-Manson Grey</div>
               </div>
               <!-- /.row-->
               <div class="card border-warning">
-                <div class="card-header">Online Analysis</div>
-                <div class="card-body">.</div>
+                <div class="card-header">
+                  <a class="link" href="online_analysis.html">Online Analysis</a>
+                </div>
+                <div class="card-body">在线分析工具，与后台的Matlab Server交互</div>
               </div>
               <!-- /.row-->
               <div class="card border-danger">
-                <div class="card-header">Online Experiment</div>
-                <div class="card-body">.</div>
+                <div class="card-header">
+                  <a class="link" href="online_experiments.html">Online Experiment</a>
+                </div>
+                <div class="card-body">当前正在进行的试验。实时数据显示，监控</div>
               </div>
               <!-- /.row-->
             </div>
