--- a/compare.html
+++ b/compare.html
@@ -117,7 +117,7 @@
           </svg>
         </button>
         <ul class="c-header-nav d-md-down-none">
-          <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="main.html">Dashboard</a></li>
+          <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="main.html">Compare</a></li>
           <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="main.html">Users</a></li>
           <li class="c-header-nav-item px-3"><a class="c-header-nav-link" href="main.html">Settings</a></li>
         </ul>
@@ -179,7 +179,7 @@
           <ol class="breadcrumb border-0 m-0">
             <li class="breadcrumb-item">Home</li>
             <li class="breadcrumb-item"><a href="main.html">Admin</a></li>
-            <li class="breadcrumb-item active">Dashboard</li>
+            <li class="breadcrumb-item active">Compare</li>
             <!-- Breadcrumb Menu-->
           </ol>
         </div>
@@ -188,176 +188,30 @@
         <main class="c-main">
           <div class="container-fluid">
             <div class="fade-in">
-              <!-- search -->
-              <div class="card">
-                <div class="card-body">
-                  <div class="form-group">
-                    <label class="col-form-label" for="appendedInputButton">Search</label>
-                    <div class="controls">
-                      <div class="input-group">
-                        <input class="form-control" id="appendedInputButton" size="16" type="text">
-                        <span class="input-group-append">
-                          <button class="btn btn-secondary" type="button">
-                            <span><img height="16" src="/assets/icons/magnifying-glass.svg"></img></span>Go!
-                          </button>
-                        </span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="card-footer px-3 py-2">
-                  <a class="btn-block text-muted d-flex justify-content-between align-items-center" href="main.html">
-                    <span class="small font-weight-bold">Advanced Search</span>
-                    <svg class="c-icon">
-                      <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-chevron-right"></use>
-                    </svg>
-                  </a>
-                </div>
-              </div>
-              <!-- Materials GCr15, QT800 -->
-              <div class="row">
-                <div class="col-sm-6 col-lg-3">
-                  <div class="card text-white bg-gradient-primary">
-                    <div class="card-body card-body pb-0 d-flex justify-content-between align-items-start">
-                      <div>
-                        <div class="text-value-lg" id="name_of_material">GCr15</div>
-                        <div>Details</div>
-                      </div>
-                      <div class="btn-group">
-                        <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          <svg class="c-icon">
-                            <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-settings"></use>
-                          </svg>
-                        </button>
-                        <div class="dropdown-menu dropdown-menu-right">
-                          <a class="dropdown-item" href="main.html">Raw Data</a>
-                          <a class="dropdown-item" href="main.html">Hysteresis Loops</a>
-                          <a class="dropdown-item" href="main.html">Prediction</a></div>
-                      </div>
-                    </div>
-                    <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-                      <canvas class="chart" id="card-chart1" height="70"></canvas>
-                    </div>
-                  </div>
-                </div>
-                <!-- /.col-->
-                <div class="col-sm-6 col-lg-3">
-                  <div class="card text-white bg-gradient-info">
-                    <div class="card-body card-body pb-0 d-flex justify-content-between align-items-start">
-                      <div>
-                        <div class="text-value-lg">QT800</div>
-                        <div>Details</div>
-                      </div>
-                      <div class="btn-group">
-                        <button class="btn btn-transparent dropdown-toggle p-0" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          <svg class="c-icon">
-                            <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-settings"></use>
-                          </svg>
-                        </button>
-                        <div class="dropdown-menu dropdown-menu-right">
-                          <a class="dropdown-item" href="main.html">Raw Data</a>
-                          <a class="dropdown-item" href="main.html">Hysteresis Loops</a>
-                          <a class="dropdown-item" href="main.html">Prediction</a></div>
-                      </div>                        
-                    </div>
-                    <div class="c-chart-wrapper mt-3 mx-3" style="height:70px;">
-                      <canvas class="chart" id="card-chart2" height="70"></canvas>
-                    </div>
-                  </div>
-                </div>
-                <!-- /.col-->
-              </div>
-              <!-- Materials GCr15, QT800 -->
-              <!-- /.row-->
-              <div class="row">
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <div class="card-body p-3 d-flex align-items-center">
-                      <div class="bg-primary p-3 mfe-3">
-                        <svg class="c-icon c-icon-xl">
-                          <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-aperture"></use>
-                        </svg>
-                      </div>
-                      <div>
-                        <div class="text-value text-primary">2</div>
-                        <div class="text-muted text-uppercase font-weight-bold small">Materials</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <div class="card-body p-3 d-flex align-items-center">
-                      <div class="bg-info p-3 mfe-3">
-                        <svg class="c-icon c-icon-xl">
-                          <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-spreadsheet"></use>
-                        </svg>
-                      </div>
-                      <div>
-                        <div class="text-value text-info">5000</div>
-                        <div class="text-muted text-uppercase font-weight-bold small">Experiment Datas</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- /.col-->
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <div class="card-body p-3 d-flex align-items-center">
-                      <div class="bg-warning p-3 mfe-3">
-                        <svg class="c-icon c-icon-xl">
-                          <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-chart-line"></use>
-                        </svg>
-                      </div>
-                      <div>
-                        <div class="text-value text-warning">10</div>
-                        <div class="text-muted text-uppercase font-weight-bold small">Analyse Methods</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- /.col-->
-                <div class="col-6 col-lg-3">
-                  <div class="card">
-                    <div class="card-body p-3 d-flex align-items-center">
-                      <div class="bg-danger p-3 mfe-3">
-                        <svg class="c-icon c-icon-xl">
-                          <use xlink:href="vendors/@coreui/icons/svg/free.svg#cil-bell"></use>
-                        </svg>
-                      </div>
-                      <div>
-                        <div class="text-value text-danger">5</div>
-                        <div class="text-muted text-uppercase font-weight-bold small">Online Experiments</div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- /.row-->
-              <div class="card border-primary">
-                <div class="card-header">Advanced Search</div>
-                <div class="card-body">.</div>
-              </div>
-              <div class="card border-success">
-                <div class="card-header">Experiments Data</div>
-                <div class="card-body">.</div>
-              </div>
-              <!-- /.row-->
-              <div class="card border-info">
-                <div class="card-header">Algorithm</div>
-                <div class="card-body">.</div>
-              </div>
-              <!-- /.row-->
-              <div class="card border-warning">
-                <div class="card-header">Online Analysis</div>
-                <div class="card-body">.</div>
-              </div>
-              <!-- /.row-->
               <div class="card border-danger">
-                <div class="card-header">Online Experiment</div>
-                <div class="card-body">.</div>
+                <div class="card-header">
+                  GCr15 vs QT800 - Basquin
+                </div>
+                <div class="card-body">
+                  <img src="/images/compare-basquin.png" width="98%"></img>
+                </div>
               </div>
-              <!-- /.row-->
+              <div class="card border-danger">
+                <div class="card-header">
+                  GCr15 vs QT800 - Manson-Coffin
+                </div>
+                <div class="card-body">
+                  <img src="/images/compare-manson-coffin.png" width="98%"></img>
+                </div>
+              </div>
+              <div class="card border-danger">
+                <div class="card-header">
+                  GCr15 vs QT800 - Mura-Mason
+                </div>
+                <div class="card-body">
+                  <img src="/images/compare-mura-mason.png" width="98%"></img>
+                </div>
+              </div>
             </div>
           </div>
         </main>
